force-app/main/default/objects/Screening_Audit__c/Screening_Audit__c.object-meta.xml
<CustomObject>
    <label>Screening_Audit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening_Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening_Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>