force-app/main/default/objects/Screening_Audit__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correlation_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>