force-app/main/default/objects/Screening_Audit__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created_At</label>
    <type>DateTime</type>
</CustomField>