force-app/main/default/objects/Screening_Audit__c/fields/Event_Payload__c.field-meta.xml
<CustomField>
    <fullName>Event_Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event_Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>