force-app/main/default/objects/Screening_Audit__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>