force-app/main/default/objects/Screening_Audit__c/listViews/Jurisdiction_IN_Queue_Screening_Audit.listView-meta.xml
<ListView>
    <fullName>Jurisdiction_IN_Queue_Screening_Audit</fullName>
    <filterScope>Queue</filterScope>
    <label>Jurisdiction_IN_Queue</label>
    <queue>Jurisdiction_IN_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>